--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Art Institute of Chicago API</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Art Institute of Chicago Artworks</h1>
-    <div id="artworks"></div>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Art Institute of Chicago Artworks</h1>
+      <div class="navbar">
+        <input type="text" id="search-bar" placeholder="Search..." />
+        <button class="navbar__btn" id="artworks-btn">Artworks</button>
+        <button class="navbar__btn" id="exhibitions-btn">Exhibitions</button>
+      </div>
+    </header>
+    <div id="content">
+      <div id="wrapper">
+      <!-- Artworks and Exhibitions content will be loaded here -->
+    </div>
+    </div>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
