--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
     </header>
     <div id="content">
       <div id="wrapper">
-      <!-- Artworks and Exhibitions content will be loaded here -->
-    </div>
+        <!-- Artworks and Exhibitions content will be loaded here -->
+        <div id="artworks-wrapper" class="content-wrapper">
+          <!-- Artworks content will be loaded here -->
+        </div>
+        <div id="exhibitions-wrapper" class="content-wrapper">
+          <!-- Exhibitions content will be loaded here -->
+        </div>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
