--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Art Institute of Chicago Artworks</h1>
+      <h1>Art Institute of Chicago Artworks and Exhibitions</h1>
       <div class="navbar">
         <input type="text" id="search-bar" placeholder="Search..." />
         <button class="navbar__btn" id="artworks-btn">Artworks</button>
@@ -26,6 +26,6 @@
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
